fix iOS layout issue

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -522,7 +522,7 @@ span.error{
 .ui-widget-content table tbody tr:first-child td{
     border-top: 1px solid @borderColor;
 }
-.ui-widget-content table tbody tr td{
+.ui-widget-content table tbody tr td:not(:last-child){
     border-right: 1px solid @borderColor;
 }
 .ui-widget-content table tbody tr:not(:last-child) td{  
